# conventional_commits_next_version

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  LICENSE  Makefile  README.md  flake.nix  release-please-config.json  renovate.json
.cargo/: config.toml
.github/: renovate.json  renovate.json5
.github/workflows/: claude-code-agent.yml  claude-code-review.yml  continuous-delivery.yml  continuous-integration.yml  conventional-commits.yml  dogfood.yml  git-history.yml  github-actions-workflows.yml  mirroring.yml  release-please.yml
ci/: check-clean-git-history.Dockerfile  check-clean-git-history.sh  check-conventional-commits-linting.Dockerfile  check-conventional-commits-linting.sh  check-e2e-formatting.sh  check-github-actions-workflows-linting.sh  check-python-formatting.Dockerfile  check-python-formatting.sh  check-rust-formatting.Dockerfile  check-rust-formatting.sh  check-rust-linting.Dockerfile  check-rust-linting.sh  check-scripts-permissions.sh  check-shell-formatting.sh  check-shell-linting.sh  check-yaml-formatting.sh  compile.Dockerfile  compile.sh  end-to-end-test.Dockerfile  end-to-end-test.sh  fix-e2e-formatting.sh  fix-python-formatting.Dockerfile  fix-python-formatting.sh  fix-rust-formatting.Dockerfile  fix-rust-formatting.sh  fix-shell-formatting.sh  fix-yaml-formatting.sh  install-github-cli.sh  publish-binary.Dockerfile  publish-binary.sh  publish-crate.Dockerfile  publish-docker-image.sh  publish-docker-manifest.sh  publish-docker.sh  publish.sh  release-artifacts.sh  unit-test.Dockerfile  unit-test.sh
conventional_commits_next_version/: Cargo.toml  README.md
conventional_commits_next_version/end-to-end-tests/: .gitignore  requirements.txt
conventional_commits_next_version/end-to-end-tests/features/: assert-current-version.feature  batch-semantic-versioning.feature  batch_semantic_versioning.feature  consecutive-semantic-versioning.feature  from-reference.feature  from-shortened-commit-hash.feature  from-stdin.feature  from_arguments_conflicts.feature  from_reference.feature  git-environment-variables.feature  git-history-all-parents-mode.feature  git-history-first-parent-mode.feature  monorepo.feature  pre-major-release.feature  v-prefix-ignored.feature
conventional_commits_next_version/end-to-end-tests/features/steps/: assertions.py  given.py  then.py  utilities.py  when.py
conventional_commits_next_version/src/: main.rs
conventional_commits_next_version/src/cli/: mod.rs
conventional_commits_next_version_lib/: .gitignore  Cargo.toml  README.md
conventional_commits_next_version_lib/src/: lib.rs
conventional_commits_next_version_lib/src/calculation_mode/: mod.rs
conventional_commits_next_version_lib/src/commits/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commit/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commit/generated_tests/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commit/generated_tests/generation/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commit/generated_tests/utilities/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commits/batch/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commits/consecutive/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commits/pre_major/batch/: mod.rs
conventional_commits_next_version_lib/src/commits/commit/tests/commits/pre_major/consecutive/: mod.rs
conventional_commits_next_version_lib/src/commits/filters/: mod.rs
conventional_commits_next_version_lib/src/utilities/version/: mod.rs
end-to-end-tests/: autopep8.requirements.txt  requirements.txt
end-to-end-tests/features/: assert-batch-conventional-commits-next-version.feature  assert-consecutive-conventional-commits-next-version.feature  assert-current-version.feature  assert_current_version.feature  batch-conventional-commits-next-version.feature  batch-semantic-versioning.feature  batch_semantic_versioning.feature  consecutive-conventional-commits-next-version.feature  consecutive-semantic-versioning.feature  consecutive_semantic_versioning.feature  environment-conventional-commits-next-version.feature  from-arguments-conflicts.feature  from-commit-hash.feature  from-commit-message.feature  from-reference.feature  from-shortened-commit-hash.feature  from-stdin.feature  from-tag.feature  from_arguments_conflicts.feature  from_arguments_missing.feature  from_commit_hash.feature  from_reference.feature  from_shortened_commit_hash.feature  from_stdin.feature  git-environment-variables.feature  git_environment_variables.feature  history_mode.feature  monorepo.feature  multiple-monorepos.feature  pre_major_release.feature  shortened-commit-hashes.feature  v-prefix-ignored.feature  v_prefix_ignored.feature
end-to-end-tests/features/steps/: arguments.py  assertions.py  conventional-commits-next-version.py  conventional_commits_next_version.py  git.py  given.py  multiple-monorepos.feature  then.py  util.py  utilities.py  when.py
src/: bin.rs  calculation_mode.rs  history_mode.rs  lib.rs  main.rs
src/cli/: mod.rs
src/commits/: mod.rs
src/commits/commit/: mod.rs
src/commits/commit/tests/: mod.rs
src/commits/filters/: mod.rs
src/commits/filters/tests/: mod.rs
src/git/: mod.rs
src/git_history_mode/: mod.rs
src/increment/: mod.rs  tests.rs
src/increment/regex/: mod.rs
src/increment/snapshots/: conventional_commits_next_version_lib__increment__tests__test_get_next_version_from_commits_case1.snap.new
src/increment/tests/: mod.rs
src/increment/tests/generated_tests/: mod.rs  utilities.rs
src/increment/tests/major/: mod.rs
src/increment/tests/minor/: mod.rs
src/increment/tests/patch/: mod.rs
src/model/: mod.rs
src/model/commits/: mod.rs
src/model/monorepo/: mod.rs
src/model/monorepos/: mod.rs
src/utilities/version/: mod.rs
(+38 files in other folders)
