[package]
name = "conventional_commits_next_version"
version = "2.2.0"
description = "A tooling and language agnostic utility to calculate the next semantic version based on the Conventional Commits since the prior version. Supports monorepos."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/conventional_commits_next_version"
readme = "README.md"
keywords = ["conventional", "commits", "semantic", "versioning", "git"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
git2 = { version = "0.13.17", default-features = false, features=[] }
structopt = "0.3.21"
log = "0.4.14"
pretty_env_logger = "0.4.0"
semver = "0.11.0"
regex = "1.4.3"
lazy_static = "1.4.0"


[dev-dependencies]
rstest = "0.6.4"


[profile.release]
lto = 'fat'
codegen-units = 1
