[package]
name = "conventional_commits_next_version"
version = "4.0.0"
description = "A tooling and language agnostic utility to calculate the next semantic version based on the Conventional Commits since the prior version. Supports monorepos."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/conventional_commits_next_version"
readme = "README.md"
keywords = ["conventional", "commits", "semantic", "versioning", "git"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
# Parsing commit messages
regex = "1.5.4"
lazy_static = "1.4.0"

# CLI parsing
structopt = "0.3.21"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Reading commits
git2 = { version = "0.13.20", default-features = false, features=[] }

# Semantic Versioning parsing
semver = "1.0.3"


[dev-dependencies]
rstest = "0.10.0"


[profile.release]
lto = 'fat'
codegen-units = 1
