[package]
name = "conventional_commits_next_version"
version = "6.1.0"
description = "A tooling and language agnostic utility to calculate the next semantic version based on the Conventional Commits since the prior version. Supports monorepos."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/DeveloperC286/conventional_commits_next_version"
readme = "README.md"
keywords = ["conventional", "commits", "semantic", "versioning", "git"]
categories = ["command-line-utilities", "development-tools", "data-structures", "encoding", "parser-implementations"]


[dependencies]
# For CLI parsing.
clap = { version = "4.4.8", features = ["derive"] }

# For logging.
log = "0.4.20"
pretty_env_logger = "0.5.0"

# For reading Git commits.
git2 = { version = "0.19.0", default-features = false, features=[] }

# For Semantic Versioning parsing.
semver = "1.0.20"

# For parsing commit messages.
regex = "1.10.2"
lazy_static = "1.4.0"

# For enum from _str etc for CLI usage.
strum = "0.26.0"
strum_macros = "0.26.0"

# For error handling.
anyhow = "1.0.89"


[dev-dependencies]
# For parameterized testing.
rstest = "0.24.0"
