[package]
name = "conventional_commits_next_version"
version = "6.0.0"
description = "A tooling and language agnostic utility to calculate the next semantic version based on the Conventional Commits since the prior version. Supports monorepos."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/conventional_commits_next_version"
readme = "README.md"
keywords = ["conventional", "commits", "semantic", "versioning", "git"]
categories = ["command-line-utilities", "development-tools", "data-structures", "encoding", "parser-implementations"]


[dependencies]
# For CLI parsing.
structopt = "0.3.26"

# For logging.
log = "0.4.16"
pretty_env_logger = "0.4.0"

# For reading Git commits.
git2 = { version = "0.14.2", default-features = false, features=[] }

# For Semantic Versioning parsing.
semver = "1.0.6"

conventional_commits_next_version_lib = "0.3.0"
