[package]
name = "conventional_commits_next_version_lib"
version = "0.3.0"
description = "A tooling and language agnostic library to calculate the next semantic version based on the Conventional Commits since the prior version. Supports monorepos."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/conventional_commits_next_version"
readme = "README.md"
keywords = ["conventional", "commits", "semantic", "versioning", "git"]
categories = ["text-processing", "development-tools", "data-structures", "encoding", "parser-implementations"]


[dependencies]
# For parsing commit messages.
regex = "1.9.5"
lazy_static = "1.4.0"

# For logging.
log = "0.4.20"

# For reading Git commits.
git2 = { version = "0.17.2", default-features = false, features=[] }

# For Semantic Versioning parsing.
semver = "1.0.19"

# For enum from _str etc for CLI usage.
strum = "0.25.0"
strum_macros = "0.25.2"


[dev-dependencies]
# For parameterized testing.
rstest = "0.18.2"
